# pybeads

./: README.md  pyproject.toml
src/beads/: __init__.py  __main__.py  cli.py  compaction.py  gitops.py  graph.py  idgen.py  models.py  storage.py
