[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beads-py"
version = "0.1.0"
description = "Distributed graph issue tracker for AI agents — Python port of beads (bd)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pydantic>=2",
    "tomli>=2; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
    "ruff",
]

[project.scripts]
bd = "beads.cli:app"
beads = "beads.cli:app"

[project.urls]
Repository = "https://github.com/user/beads-py"

[tool.hatch.build.targets.wheel]
packages = ["src/beads"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
